Fix AI chatbot and update Django version

--- a/CapitalNest/capitalnest/templates/core/ai_insights.html
+++ b/CapitalNest/capitalnest/templates/core/ai_insights.html
@@ -590,6 +590,22 @@
   </div>
 
   <script>
+    // Get CSRF token from cookie
+    function getCookie(name) {
+      let cookieValue = null;
+      if (document.cookie && document.cookie !== '') {
+        const cookies = document.cookie.split(';');
+        for (let i = 0; i < cookies.length; i++) {
+          const cookie = cookies[i].trim();
+          if (cookie.substring(0, name.length + 1) === (name + '=')) {
+            cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+            break;
+          }
+        }
+      }
+      return cookieValue;
+    }
+
     function sendAutoPrompt(type) {
       let prompt = '';
       
@@ -636,10 +652,16 @@
       
       chatBox.scrollTop = chatBox.scrollHeight;
       
+      // Get CSRF token
+      const csrftoken = getCookie('csrftoken');
+      
       // Simulate API call
       fetch("/ai/chat/", {
         method: "POST",
-        headers: { "Content-Type": "application/json" },
+        headers: { 
+          "Content-Type": "application/json",
+          "X-CSRFToken": csrftoken
+        },
         body: JSON.stringify({ message })
       })
         .then(res => res.json())
